# project-manager

./: .gitignore  ENHANCED_FEATURES.md  README.md  demo.md  package-lock.json  package.json  podman-compose.yml  setup.sh
services/ai-processor/: Dockerfile  README.md  demo_design_processor.py  pyproject.toml  quick_demo.py  test_ollama.py
services/ai-processor/ai_processor/: __init__.py  database.py  main.py
services/ai-processor/ai_processor/core/: config.py  error_handler.py  interfaces.py
services/ai-processor/ai_processor/models/: schemas.py
services/ai-processor/ai_processor/services/: design_document_processor.py  document_orchestrator.py  document_parser.py  jira_issue_creator.py  nlp_pipeline.py  ollama_client.py  story_enhancer.py
services/ai-processor/tests/: test_architecture.py  test_database.py  test_integration.py  test_main.py  test_services.py
services/database/: Containerfile  README.md  backup.sh  docker-entrypoint.sh  manage.sh  mongod.conf  podman-compose.yml  restore.sh
services/frontend/: Dockerfile  README.md  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
services/frontend/src/: App.tsx  main.tsx
services/frontend/src/components/: Layout.tsx
services/frontend/src/pages/: Dashboard.tsx  DocumentUpload.tsx  ProcessingResults.tsx  ProjectDetails.tsx  Projects.tsx  Settings.tsx
services/frontend/src/styles/: globals.css
services/frontend/src/types/: index.ts
services/gateway/: package.json
services/gateway/src/: config.js  server.js
services/gateway/src/middleware/: auth.js
services/gateway/src/routes/: ai.js
